<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/root"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <FrameLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="@dimen/dp_30"
        android:layout_marginBottom="@dimen/dp_30">

        <de.hdodenhof.circleimageview.CircleImageView
            android:id="@+id/profileImage"
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:layout_gravity="center"
            android:scaleType="centerCrop"
            android:src="@drawable/ic_profile_placeholder"
            app:civ_border_color="@color/gray_color"
            app:civ_border_width="@dimen/dp_3" />

        <ImageView
            android:id="@+id/changeImageBtn"
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:layout_gravity="right|bottom"
            android:src="@drawable/camera" />

    </FrameLayout>


    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="@dimen/dp_10"
        android:layout_marginTop="@dimen/dp_2"
        android:layout_marginRight="@dimen/dp_10"
        android:layout_marginBottom="@dimen/dp_4"
        android:background="@color/list_background_color"
        app:cardCornerRadius="@dimen/dp_6"
        app:cardElevation="@dimen/dp_4">

        <LinearLayout
            android:id="@+id/linearL"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/login_edit_text_background_color"
            android:orientation="vertical"
            android:padding="@dimen/dp_20">

            <androidx.appcompat.widget.AppCompatTextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="start"
                android:layout_marginEnd="@dimen/dp_10"
                android:layout_marginRight="@dimen/dp_10"
                android:background="@color/login_edit_text_background_color"
                android:paddingStart="@dimen/dp_10"
                android:paddingLeft="@dimen/dp_10"
                android:text="@string/hint_firstname"
                android:textColor="@color/colorWhite"
                tools:ignore="RtlSymmetry" />

            <EditText
                android:id="@+id/etFirstName"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginEnd="@dimen/dp_10"
                android:background="@color/login_edit_text_background_color"
                android:paddingStart="@dimen/dp_10"
                android:text=""
                android:textColor="@color/colorWhite"
                android:textSize="@dimen/sp_16" />

            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:layout_marginLeft="@dimen/dp_10"
                android:layout_marginTop="@dimen/dp_5"
                android:layout_marginRight="@dimen/dp_10"
                android:background="@color/gray_color" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginEnd="@dimen/dp_10"
                android:layout_marginRight="@dimen/dp_10"
                android:background="@color/login_edit_text_background_color"
                android:paddingStart="@dimen/dp_10"
                android:paddingLeft="@dimen/dp_10"
                android:paddingTop="@dimen/dp_10"
                android:text="@string/hint_lastname"
                android:textColor="@color/colorWhite" />

            <EditText
                android:id="@+id/etLastName"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginEnd="@dimen/dp_10"
                android:background="@color/login_edit_text_background_color"
                android:paddingStart="@dimen/dp_10"
                android:text=""
                android:textColor="@color/colorWhite"
                android:textSize="@dimen/sp_16" />

            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:layout_marginLeft="@dimen/dp_10"
                android:layout_marginTop="@dimen/dp_5"
                android:layout_marginRight="@dimen/dp_10"
                android:background="@color/gray_color" />

            <TextView
                android:id="@+id/tbSubmitBtn"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/dp_10"
                android:layout_marginTop="@dimen/dp_20"
                android:layout_marginRight="@dimen/dp_10"
                android:background="@drawable/profile_edit_button"
                android:gravity="center"
                android:padding="@dimen/dp_10"
                android:text="@string/hint_submit"
                android:textColor="@color/colorWhite"
                android:textSize="@dimen/sp_17" />
        </LinearLayout>
    </androidx.cardview.widget.CardView>
</LinearLayout>

