<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.activity.UserDetailsActivity">

    <include
        layout="@layout/toolbar_common"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <de.hdodenhof.circleimageview.CircleImageView
        android:id="@+id/iv_profileImage"
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:layout_gravity="center"
        android:layout_marginBottom="@dimen/dp_16"
        android:scaleType="centerCrop"
        android:src="@drawable/ic_profile_placeholder"
        app:civ_border_color="@color/gray_color"
        app:civ_border_width="@dimen/dp_3"
        app:layout_constraintBottom_toTopOf="@+id/cv_profileDetailsHolder"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <androidx.cardview.widget.CardView
        android:id="@+id/cv_profileDetailsHolder"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="@dimen/dp_10"
        android:layout_marginTop="@dimen/dp_2"
        android:layout_marginRight="@dimen/dp_10"
        android:layout_marginBottom="@dimen/dp_4"
        android:background="@color/list_background_color"
        app:cardCornerRadius="@dimen/dp_6"
        app:cardElevation="@dimen/dp_4"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <LinearLayout
            android:id="@+id/linearL"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/login_edit_text_background_color"
            android:orientation="vertical"
            android:padding="@dimen/dp_20">

            <androidx.appcompat.widget.AppCompatTextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="start"
                android:layout_marginEnd="@dimen/dp_10"
                android:layout_marginRight="@dimen/dp_10"
                android:background="@color/login_edit_text_background_color"
                android:paddingStart="@dimen/dp_10"
                android:paddingLeft="@dimen/dp_10"
                android:text="@string/hint_firstname"
                android:textColor="@color/colorWhite"
                tools:ignore="RtlSymmetry" />

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/tv_FirstName"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginEnd="@dimen/dp_10"
                android:background="@color/login_edit_text_background_color"
                android:paddingStart="@dimen/dp_10"
                android:text=""
                android:textColor="@color/colorWhite"
                android:textSize="@dimen/sp_16" />

            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:layout_marginLeft="@dimen/dp_10"
                android:layout_marginTop="@dimen/dp_5"
                android:layout_marginRight="@dimen/dp_10"
                android:background="@color/gray_color" />

            <androidx.appcompat.widget.AppCompatTextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginEnd="@dimen/dp_10"
                android:layout_marginRight="@dimen/dp_10"
                android:background="@color/login_edit_text_background_color"
                android:paddingStart="@dimen/dp_10"
                android:paddingLeft="@dimen/dp_10"
                android:paddingTop="@dimen/dp_10"
                android:text="@string/hint_lastname"
                android:textColor="@color/colorWhite" />

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/tv_LastName"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginEnd="@dimen/dp_10"
                android:background="@color/login_edit_text_background_color"
                android:paddingStart="@dimen/dp_10"
                android:text=""
                android:textColor="@color/colorWhite"
                android:textSize="@dimen/sp_16" />

            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:layout_marginLeft="@dimen/dp_10"
                android:layout_marginTop="@dimen/dp_5"
                android:layout_marginRight="@dimen/dp_10"
                android:background="@color/gray_color" />

            <androidx.appcompat.widget.AppCompatTextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginEnd="@dimen/dp_10"
                android:layout_marginRight="@dimen/dp_10"
                android:background="@color/login_edit_text_background_color"
                android:paddingStart="@dimen/dp_10"
                android:paddingLeft="@dimen/dp_10"
                android:paddingTop="@dimen/dp_10"
                android:text="@string/hint_email"
                android:textColor="@color/colorWhite" />

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/tv_email"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginEnd="@dimen/dp_10"
                android:background="@color/login_edit_text_background_color"
                android:paddingStart="@dimen/dp_10"
                android:text=""
                android:textColor="@color/colorWhite"
                android:textSize="@dimen/sp_16" />
        </LinearLayout>
    </androidx.cardview.widget.CardView>
</androidx.constraintlayout.widget.ConstraintLayout>